# AllSkyCameraCal

./: .gitignore  CMakeLists.txt  README.md  analysis.c  analysis.h  export.c  export.h  import.c  import.h  info.c  info.h  main.c  main.h  options.c  options.h  star.h  test_site_import.c  util.c  util.h
Docker/: Dockerfile  docker-build-build.sh  docker-build-deploy.sh  docker-build-dev.sh  docker-build.sh  docker-buildx-push.sh  docker-setup-dev-container.sh
Notes/: AzEl_to_Ra_Dec.kra  Geodetic_to_XYZ.kra  RA_and_DEC_hat_vectors.kra  Star_moment_estimation.kra
